<resources>
    <string name="app_name">Coffee Ordering App</string>
    <string name="welcome">Welcome</string>
    <string name="yourOrder">your order</string>
    <string name="quantity">QUANTITY</string>
    <string name="numberOfQuantity">2</string>
    <string name="order">ORDER</string>
    <string name="price">P9000CE</string>
    <string name="numberOfPrice">$0</string>
    <string name="minus">-</string>
    <string name="add">+</string>
</resources>
