<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        android:src="@drawable/coffee" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/colorWhite"
        android:textSize="100sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/yourOrder"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/yourOrder"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_below="@id/yourOrder"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@color/colorAccent"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/quantity"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@id/quantity"
        android:layout_centerHorizontal="true"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/numberOfQuantity"
        android:textColor="@color/colorBlack"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/quantity"
        android:layout_toLeftOf="@id/quantity_text_view"
        android:background="@color/button"
        android:onClick="decrement"
        android:text="@string/minus"
        android:textColor="@color/colorBlack"
        android:textSize="25sp" />


    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/quantity"
        android:layout_toRightOf="@id/quantity_text_view"
        android:background="@color/button"
        android:onClick="increment"
        android:text="@string/add"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/price"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_below="@id/quantity_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorAccent"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/price"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonOrder"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_below="@id/price_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/button"
        android:fontFamily="serif"
        android:onClick="submitOrder"
        android:text="@string/order"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price"
        android:layout_centerHorizontal="true"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/numberOfPrice"
        android:textColor="@color/colorBlack"
        android:textSize="24sp" />

</RelativeLayout>